[package]
name = "cldap"
version = "0.1.0"
authors = ["Ross Delinger <rossdylan@csh.rit.edu>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rossdylan/rust-cldap"
homepage = "https://github.com/rossdylan/rust-cldap"
description = "Rust bindings to the C ldap library."

[dependencies]
libc = "0.2.10"
